# Haigaku-DatasetManager

./: .gitignore  CMakeLists.txt  HaigakuManager_setup.iss  LICENSE  README.md
resources/: aero_style.qss  resources.qrc
src/: main.cpp
src/models/: ThumbnailListModel.cpp  ThumbnailListModel.h
src/resources/: resources.qrc
src/services/: AutoCaptionManager.cpp  AutoCaptionManager.h  ThumbnailLoader.cpp  ThumbnailLoader.h  ThumbnailWorker.cpp  ThumbnailWorker.h  WdVIT_TaggerEngine.cpp  WdVIT_TaggerEngine.h
src/ui/: AutoCaptionSettingsDialog.cpp  AutoCaptionSettingsDialog.h  AutoCaptionSettingsPanel.cpp  AutoCaptionSettingsPanel.h  AutoCaptionTaskPane.cpp  AutoCaptionTaskPane.h  StatisticsDialog.cpp  StatisticsDialog.h  TagEditorWidget.cpp  TagEditorWidget.h  TagPillWidget.cpp  TagPillWidget.h  ThumbnailDelegate.cpp  ThumbnailDelegate.h  WordCloudWidget.cpp  WordCloudWidget.h  mainwindow.cpp  mainwindow.h
src/utils/: QFlowLayout.cpp  QFlowLayout.h
